removing some things